增加了直播功能

--- a/app/src/main/res/layout/hunter_header.xml
+++ b/app/src/main/res/layout/hunter_header.xml
@@ -278,7 +278,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="10dp"/>
+                    android:padding="10dp" />
             </HorizontalScrollView>
         </LinearLayout>
 
@@ -292,7 +292,8 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="2dp"
@@ -303,7 +304,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:text="公会游戏"
+                android:text="公会美女"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </LinearLayout>
