--- a/app/src/main/res/layout/item_mine.xml
+++ b/app/src/main/res/layout/item_mine.xml
@@ -208,6 +208,39 @@
         android:background="@color/aile_line_gray" />
 
     <LinearLayout
+        android:id="@+id/tv_ll"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/btn_bg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/item_post" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="直播"
+            android:textColor="@color/black" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/share_arrow" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/aile_line_gray" />
+
+    <LinearLayout
         android:id="@+id/update_ll"
         android:layout_width="match_parent"
         android:layout_height="50dp"
