--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,11 @@
         <item name="android:layout_height">35dp</item>
     </style>
 
+    <style name="DemoButton">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:background">@drawable/radio_border</item>
+    </style>
 </resources>
