--- a/app/src/main/res/layout/window_gift.xml
+++ b/app/src/main/res/layout/window_gift.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gift_ll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/gift_popu_bg" >
-
-    </LinearLayout>
-</LinearLayout>
+    android:layout_height="200dp"
+    android:background="@drawable/gift_popu_bg"
+    android:orientation="vertical"/>
